# chemfiles-cli

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c
resources/: He.xyz
src/: CMakeLists.txt  main.c
